tests/snapshots/errors/pop_empty_array.mc
var arr: array<int> = [];
let x = pop(arr);
print(x);
